[package]
name = "media_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# # We could use any path here, but we are following the community convention
# # We could specify a library name using the `name` field. If unspecified,
# # cargo will default to `package.name`, which is what we want.
# name = "random_assets"
# path = "src/lib.rs"

[[bin]]
name = "media_library_backend"
path = "src/bin/main.rs"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-types = "0.49.0"
anyhow = "1.0.66"
serde = { version = "1.0.147", features = ["derive" ]}
mime_guess = "2"
dotenv = "0.15.0"


[dev-dependencies]
reqwest = "0.11"